MY FIRST CSS ANIMATION WOW

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,2 +1,13 @@
-h1 {
-  color: blue; }
+div {
+  background: teal;
+  width: 200px;
+  height: 200px;
+  animation: tutsFade 4s 1s infinite linear alternate;
+  -webkit-animation: tutsFade 4s 1s infinite linear alternate; }
+
+@-webkit-keyframes tutsFade {
+  0% {
+    opacity: 1; }
+
+  100% {
+    opacity: 0; } }
