Change style to use square class

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,11 +1,18 @@
-div {
+.square {
   background: teal;
   width: 200px;
   height: 200px;
-  animation: tutsFade 4s 1s infinite linear alternate;
-  -webkit-animation: tutsFade 4s 1s infinite linear alternate; }
+  -webkit-animation: tutsFade 4s 1s infinite linear alternate;
+          animation: tutsFade 4s 1s infinite linear alternate; }
 
 @-webkit-keyframes tutsFade {
+  0% {
+    opacity: 1; }
+
+  100% {
+    opacity: 0; } }
+
+@keyframes tutsFade {
   0% {
     opacity: 1; }
 
