--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,7 +3,8 @@
   width: 200px;
   height: 200px;
   animation: tutsFade 2s 1s infinite linear alternate,
-             tutsRotate 0.5s 1s infinite linear alternate;
+             square-to-circle 2s 1s infinite cubic-bezier(1,.015,.295,1.225) alternate,
+             tutsRotate 2s 1s infinite linear alternate;
 }
 
 @keyframes tutsFade {
@@ -12,14 +13,21 @@
   }
 
   100% {
-    opacity: 0;
+    opacity: 0.9;
   }
+}
+
+@keyframes square-to-circle {
+  0%   { border-radius: 0 0 0 0; }
+  25%  { border-radius: 50% 0 0 0; }
+  50%  { border-radius: 50% 50% 0 0; }
+  75%  { border-radius: 50% 50% 50% 0; }
+  100% { border-radius: 50%; }
 }
 
 @keyframes tutsRotate {
   to {
     transform: rotate(180deg);
-    background: orange;
-    border-radius: 100%;
+    background: coral;
   }
 }
